fix: Make section2 width 90% on mobile

--- a/style.css
+++ b/style.css
@@ -156,6 +156,7 @@ p a {
         padding: 0;
         padding-left: 1.5rem;
         margin-bottom: 2rem;
+        width: 90%;
     }
 }
 
